fix wrapping

--- a/src/components/DailyInfo/DailyInfo.module.css
+++ b/src/components/DailyInfo/DailyInfo.module.css
@@ -3,12 +3,12 @@
   flex-direction: column;
 
   gap: 24px;
-  margin: 0 auto;
+  margin: 0 auto 40px;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1439px) {
   .dailyInfo {
-    margin: 0 auto;
+    margin: 0 auto 40px;
     width: 100%;
   }
 }
